# saiga

./: .README.md.swp  .gitignore  Cargo.toml  README.md  justfile
iced_saiga/: Cargo.toml
iced_saiga/src/: backend.rs  bindings.rs  lib.rs  settings.rs  subscription.rs  terminal.rs  theme.rs  view.rs
saiga/: Cargo.toml
saiga/src/: main.rs
saiga_backend/: Cargo.toml
saiga_backend/src/: event.rs  event_loop.rs  index.rs  lib.rs  pty.rs  selection.rs  terminal.rs
saiga_backend/src/grid/: cell.rs  cursor.rs  mod.rs  resize.rs  row.rs  storage.rs
saiga_backend/src/term/: cell.rs  color.rs  mod.rs
saiga_backend/src/tty/: mod.rs  unix.rs
saiga_backend/src/tty/windows/: blocking.rs  conpty.rs
saiga_bench/: Cargo.toml
saiga_bench/benches/: bench_main.rs
saiga_bench/benches/vte/: mod.rs
saiga_bench/benches/vte/ascii_printable/: benchmark
saiga_bench/benches/vte/medium_cells/: benchmark
saiga_bench/benches/vte/missing_glyphs/: benchmark
saiga_bench/benches/vte/no_print/: benchmark
saiga_bench/benches/vte/scrolling/: benchmark
saiga_bench/benches/vte/scrolling_bottom_region/: benchmark
saiga_bench/benches/vte/scrolling_bottom_small_region/: benchmark
saiga_bench/benches/vte/scrolling_fullscreen/: benchmark
saiga_bench/benches/vte/scrolling_top_region/: benchmark
saiga_frontend/: Cargo.toml
saiga_frontend/src/: backend.rs  color.rs  font.rs  lib.rs  settings.rs  size.rs  term_font.rs  terminal.rs  theme.rs
saiga_frontend/src/display/: context.rs  mod.rs
saiga_frontend/src/display/brush/: glyph.rs  math.rs  mod.rs  rect.rs  rect.wgsl
saiga_frontend/src/display/brush/glyph/: mod.rs
saiga_frontend/src/display/brush/rect/: mod.rs
saiga_frontend/src/display/renderer/: mod.rs
saiga_frontend/src/display/renderer/brush/: rect.rs  rect.wgsl
saiga_input/: Cargo.toml
saiga_input/src/: encoder.rs  function_keys.rs  key.rs  lib.rs
saiga_macros/: Cargo.toml
saiga_macros/src/: lib.rs
saiga_vte/: Cargo.toml  README.md  justfile
saiga_vte/benches/: ascii.txt  bat.txt  parser.rs  utf8.ansi
saiga_vte/benches/ascii/: benchmark
saiga_vte/benches/ascii_all/: benchmark
saiga_vte/benches/cursor_motion/: benchmark
saiga_vte/benches/dense_cells/: benchmark
saiga_vte/benches/light_cells/: benchmark
saiga_vte/benches/scrolling_bottom_region/: benchmark
saiga_vte/benches/scrolling_bottom_small_region/: benchmark
saiga_vte/benches/scrolling_top_small_region/: benchmark
saiga_vte/benches/unicode/: benchmark
saiga_vte/examples/: parselog.rs  vtstats.rs
saiga_vte/src/: ansi.rs  lib.rs  param.rs  params.rs  table.rs  utf8.rs
saiga_vte/src/ansi/: c0.rs  handler.rs  mod.rs  processor.rs
swiftty_backend/: Cargo.toml
swiftty_backend/src/: action.rs  ansi.rs  lib.rs  processor.rs  utf.rs  utf8.rs
swiftty_keymaster/: Cargo.toml
swiftty_keymaster/src/: lib.rs
swiftty_vte/: Cargo.toml
swiftty_vte/src/: ansi.rs  executor.rs  intermediate.rs  lib.rs  osc.rs  param.rs  table.rs
swiftty_vte/src/ansi/: mod.rs  processor.rs
