[package]
name = "saiga_frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
glyphon = "0.8.0"
wgpu = "24.0.1"
saiga_backend = { path = "../saiga_backend" }
saiga_vte = { path = "../saiga_vte" }
winit = "0.30.8"
tokio = { version = "1.43.0", features = ["full"] }
bytemuck = { version = "1.21.0", features = ["derive"] }
pollster = "0.4.0"
