[package]
name = "saiga_vte"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.25"
simdutf8 = "0.1.5"
bitflags = "2.8.0"
arrayvec = "0.7.6"
memchr = { version = "2.7.4", default-features = false }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
vte = "0.15.0"

[[bench]]
name = "parser"
harness = false
