[package]
name = "saiga_vte"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.25"
simdutf8 = "0.1.5"
bitflags = "2.8.0"
memchr = "2.7.4"

[dev-dependencies]
# alacritty
vte = "0.15.0"
# wezterm
vtparse = "0.6.2"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parser"
harness = false
